<resources>
    <string name="app_name">awhittle-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_entry">EditEntryActivity</string>
    <string name="new_entry">New Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="date">Date: </string>
    <string name="station">Station: </string>
    <string name="odo">Odometer Reading: </string>
    <string name="grade">Fuel Grade: </string>
    <string name="amount">Fuel Amount: </string>
    <string name="unitcost">Fuel Unit Cost: </string>
    <string name="cost">Fuel Cost: </string>
    <string name="totalcost">Total Cost: </string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="station_format">Name of station</string>
    <string name="km">km</string>
    <string name="litres">L</string>
    <string name="fuel_grade_format">Type of fuel</string>
    <string name="unitcost_format">cents/L</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_numformat">Please enter numbers in the appropriate fields</string>
    <string name="dollar">$</string>
</resources>
